# src/main/java/br/com/devrodrigues/schoolservice/input/api/middleware/YouCanRunAspect.java
@@ -1,6 +1,6 @@
 package br.com.devrodrigues.schoolservice.input.api.middleware;
 
-import br.com.devrodrigues.schoolservice.core.enums.Permissions;
+import br.com.devrodrigues.schoolservice.core.exceptions.YouCantRunException;
 import br.com.devrodrigues.schoolservice.ports.UserPort;
 import org.aspectj.lang.ProceedingJoinPoint;
 import org.aspectj.lang.annotation.Around;
@@ -8,8 +8,6 @@ import org.aspectj.lang.annotation.Aspect;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
-
-import static br.com.devrodrigues.schoolservice.core.enums.Permissions.ROLLS;
 
 @Aspect
 @Component
@@ -23,20 +21,23 @@ public class YouCanRunAspect {
     }
 
     @Around("execution(* br.com.devrodrigues.schoolservice.input.api.StudentApiImpl.listAll(..))" +
-            "|| execution(* br.com.devrodrigues.schoolservice.input.api.AttendanceApiImpl.storeAttendance(..))"
+            "|| execution(* br.com.devrodrigues.schoolservice.input.api.AttendanceApiImpl.storeAttendance(..))" +
+            "|| execution(* br.com.devrodrigues.schoolservice.input.api.AttendanceApiImpl.attendanceJustifyAttendanceIdPost(..)) " +
+            "|| execution(* br.com.devrodrigues.schoolservice.input.api.ReportApiImpl.reportAttendanceGet(..))"
     )
 
     public Object execute(ProceedingJoinPoint pjp) throws Throwable {
         var token = (String) pjp.getArgs()[0];
+        var function = (String) pjp.getArgs()[1];
 
         try {
-            var youCanRun = userPort.youCanRun(token, ROLLS.getValue());
+            var youCanRun = userPort.youCanRun(token, function);
 
             if (youCanRun) {
                 return pjp.proceed();
             }
 
-            throw new RuntimeException("You can't run this function");
+            throw new YouCantRunException("You can't run this function");
         } catch (Exception e) {
             logger.error("Error in youCanRunAspect", e);
             throw new RuntimeException(e);
