# src/main/java/br/com/devrodrigues/schoolservice/output/database/models/JustifyEntity.java
@@ -1,0 +1,44 @@
+package br.com.devrodrigues.schoolservice.output.database.models;
+
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import javax.persistence.OneToOne;
+
+@Entity(name = "justify")
+public class JustifyEntity {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Integer id;
+
+    private String message;
+
+    @OneToOne(mappedBy = "justify")
+    private AttendanceEntity attendance;
+
+    public Integer getId() {
+        return id;
+    }
+
+    public void setId(Integer id) {
+        this.id = id;
+    }
+
+    public String getMessage() {
+        return message;
+    }
+
+    public void setMessage(String message) {
+        this.message = message;
+    }
+
+    public AttendanceEntity getAttendance() {
+        return attendance;
+    }
+
+    public void setAttendance(AttendanceEntity attendance) {
+        this.attendance = attendance;
+    }
+}
